Fix horizontal alignments of Devicon classes

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -77,7 +77,7 @@
 .html5-icon:before        { .fa; content: "\f13b"; font-size: 15px; top: 1px; }
 .mobile-icon:before       { .fa; content: "\f10b"; font-size: 20px; top: 2px; }
 .moon-icon:before         { .fa; content: "\f186"; font-size: 16px; top: 1px; }
-.music-icon:before        { .fa; content: "\f001"; font-size: 15px; left: -1px; }
+.music-icon:before        { .fa; content: "\f001"; font-size: 15px; }
 .print-icon:before        { .fa; content: "\f02f"; font-size: 15px; top: 2px; }
 .recycle-icon:before      { .fa; content: "\f1b8"; font-size: 15px; top: 2px; }
 .rss-icon:before          { .fa; content: "\f143"; font-size: 16px; top: 2px; }
@@ -104,7 +104,7 @@
 .elixir-icon:before       { .mf; content: "\f113"; top: 1px; }
 .gnome-icon:before        { .mf; content: "\f119"; top: 1px; }
 .haskell-icon:before      { .mf; content: "\f121"; top: 2px; font-size: 16px; }
-.java-icon:before         { .mf; content: "\f126"; top: 2px; font-size: 16px; left: -1px; }
+.java-icon:before         { .mf; content: "\f126"; top: 2px; font-size: 16px; }
 .js-icon:before           { .mf; content: "\f129"; top: 1px; font-size: 14px; }
 .msql-icon:before         { .mf; content: "\f136"; top: 2px; font-size: 15px; .sharpen; }
 .objc-icon:before         { .mf; content: "\f13e"; top: 2px; font-size: 16px; }
@@ -153,9 +153,9 @@
 .materialize-icon:before  { .devicons; content: "\e6b6"; transform: scale(1.2); .thicken; }
 .modernizr-icon:before    { .devicons; content: "\e620"; }
 .mootools-icon:before     { .devicons; content: "\e68f"; .sharpen; }
-.node-icon:before         { .devicons; content: "\e618"; left: -1px; }
+.node-icon:before         { .devicons; content: "\e618"; }
 .pod-icon:before          { .devicons; content: "\e669"; font-size: 15px; top: 2px; }
-.prolog-icon:before       { .devicons; content: "\e6a1"; left: -1px; }
+.prolog-icon:before       { .devicons; content: "\e6a1"; }
 .rails-icon:before        { .devicons; content: "\e63b"; }
 .raphael-icon:before      { .devicons; content: "\e65f"; font-size: 15px; }
 .requirejs-icon:before    { .devicons; content: "\e670"; }
